2008-10-19  Ulrich Pfeifer  <pfeifer@wait.de>

	* perlindex.PL: Added support for updating documents as requested
	by SREZIC in http://rt.cpan.org/Ticket/Display.html?id=39862.
	Update is transparent - except for the time used in the garbage
	collect phase.

2006-07-02  Ulrich Pfeifer  <upf@de.uu.net>

	* perlindex.PL (index): moving the check for Pod::Text in the
	index function.  The result went out of scope before (thanks
	Florian for the bug report).  Fixing the loop variable in the main
	loop (thanks Florian for the bug report).  Adding support for
	IO::Scalar.
	
2006-03-19  Ulrich Pfeifer  <upf@de.uu.net>

	* Fixed a bug reported by Florian Ragwitz:  Absolute filenames
	were access incorrectly from hit list.

2005-09-18  Ulrich Pfeifer  <pfeifer@wait.de>

	* Integrated a patch from Marek Rouchal to use Pod::Text for
	parsing if available.  I did rework the patch a little to remove
	the need for IO::Scalar which does no seem to be part of debian
	sarge.  Now underscore is also a valid letter.

2005-04-10  Ulrich Pfeifer  <upf@wait.de>

	* Re-Added Text::English as it does not seem to be available
	separately.  I'd rather not package a "foreign" separately.

2005-04-03  Ulrich Pfeifer  <pfeifer@wait.de>

	* Removed Text::English from Distribution
	* Determine pager and search path at run time (Patch from Marek, Ticket #4506)

2004-05-02  Florian Ragwitz

	* please parameterize the $IDIR in the make process
	* clarified license
	* clarified authorship of Text::English
	
2003-06-19  Slaven Rezic 

	* t/basic.t: made test more safe and portable

2003-06-18  Ulrich Pfeifer  <pfeifer@wait.de>

	Added some regression tests before the CPAN testers beat me up.

2003-06-18  Slaven Rezic 

        [cpan #2820] Fix indexed directories

        In some perl installations, installsitelib is not part of the
	privlib directory. That is, privlib is something like
	/usr/local/lib/perl5/5.8.0 and installsitelib something like